--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           dotnet-version: 6.0
       - name: Publish .NET Core Project
-        run: dotnet publish Birds/Birds/Birds.csproj -c Release -o release --nologo
+        run: dotnet publish Birds/Birds-Browser/Birds.csproj -c Release -o release --nologo
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
